src/objects/Employment_Business_Detail__c.object
<CustomObject>
    <fields>
        <fullName>Business_Activity__c</fullName>
        <label>Business Activity</label>
        <picklist>
            <picklistValues>
                <fullName>Tickli Moti</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Home Based</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Hawker</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Fruit Selling</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>General Store</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Vegetable Selling</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Tiffin Services</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Milk Selling</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Kite Making</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Imitation Jewellery</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Papad Making</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Tailoring</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Fish Selling</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other (Please Specify)</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Business_Address__c</fullName>
        <label>Business Address</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Business_Ownership__c</fullName>
        <label>Business Ownership</label>
        <picklist>
            <picklistValues>
                <fullName>Owned</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Rented</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Business_Sector__c</fullName>
        <label>Business Sector</label>
        <picklist>
            <picklistValues>
                <fullName>Trade</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Service Manufacturing</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Business_Structure__c</fullName>
        <label>Business Structure</label>
        <picklist>
            <picklistValues>
                <fullName>Shop</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Home Based</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Hawker</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Semi-mobile</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Business_Type__c</fullName>
        <label>Business Type</label>
        <picklist>
            <picklistValues>
                <fullName>Self Employed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Commission Based</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Client__c</fullName>
        <label>Client</label>
        <referenceTo>Client__c</referenceTo>
        <relationshipLabel>Employment / Business Details</relationshipLabel>
        <relationshipName>Employment_Business_Details</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Loan_Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Loan Account</label>
        <referenceTo>Loan_Account__c</referenceTo>
        <relationshipLabel>Employment / Business Details</relationshipLabel>
        <relationshipName>Employment_Business_Details</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Number_of_years_in_Business__c</fullName>
        <label>Number of years in Business</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Number_of_years_in_Service__c</fullName>
        <label>Number of years in Service</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Service_Category__c</fullName>
        <label>Service Category</label>
        <picklist>
            <picklistValues>
                <fullName>House Maid</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cook</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Security Guard</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Caretaker</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Peon</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Others (Please specify)</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Type_of_Employment__c</fullName>
        <label>Type of Employment</label>
        <picklist>
            <picklistValues>
                <fullName>Salaried</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Business</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Not Working</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <label>Employment / Business Detail</label>
    <nameField>
        <displayFormat>EBDID-{0000000000}</displayFormat>
        <label>Employment / Business Detail ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Employment / Business Details</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>